[project]
name = "test-api-service"
version = "0.1.0"
description = "Minimal FastAPI backend for Jurati integration testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"